# proverbs-book-ai

./: .gitignore  AUTOMATED-TASKS-COMPLETE.md  BUILD.md  BUILD_DESKTOP_APP.md  BUILD_MACOS_INSTALLER.md  BUILD_NOW.md  CLEANUP-COMPLETE.md  CLEANUP-PLAN.md  COMMANDS.md  COMPLETE-SOLUTION-SUMMARY.md  COMPLETE_INSTRUCTIONS_SUMMARY.md  COMPLETE_SETUP_SUMMARY.md  CONTRIBUTING.md  CONVERSION-INSTRUCTIONS.md  Create Shortcut.vbs  DEPLOYMENT-QUICK-START.md  DONATION-SETUP.md  FEATURE_VERIFICATION.md  FINAL_INSTALLER_GUIDE.md  FIX_ICON.md  GET_ICON.md  GET_INSTALLER.md  HOW_TO_OPEN_TERMINAL.md  HOW_TO_TEXT_THE_APP.md  INSTALLATION_COMPLETE.md  INSTALLER_README.md  INSTALL_SCRIPTS.md  INSTRUCTIONS_IPAD.md  INSTRUCTIONS_MAC.md  Install and Launch.bat  Install and Launch.ps1  LICENSE  LICENSE-WILHELMTECHCO.md  Launch App.bat  MOM_INSTALLER_GUIDE.md  ORGANIZATION-SUMMARY.md  PRODUCTION-READY-SUMMARY.md  PUSH-TO-GITHUB.md  Parker-David-Luedtke-Signature-Realistic.html  Parker-David-Luedtke-Signature.html  (+26 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  REPOSITORY-SETUP.md
admin-panel/: index.html
backend-api/: DEPLOYMENT-GUIDE.md  README.md  STRIPE-SETUP.md  docker-compose.yml  env.template  package.json  server.js  setup-databases.bat  setup-databases.ps1
desktop_app/: .gitignore  BACKEND-COMPARISON.md  BUILD-MAC-INSTALLER.sh  (+34 more)
src-tauri/: Cargo.toml  create_icon.ps1  create_minimal_icon.ps1  generate_icons.md  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: book_assembler.rs  dependency_installer.rs  image_gen.rs  lib.rs  main.rs  ollama.rs
(+102 files in other folders)
